# Core_API

./: .dockerignore  .gitignore  API.md  Cargo.toml  DATABASE.md  Dockerfile  README.md  development.Dockerfile  docker-compose.yml  entrypoint.sh  eslint.config.mjs  init.sql  next.config.ts  nginx.conf  orval.config.js  package-lock.json  package.json  renovate.json
.cargo/: config.toml
.github/workflows/: auto-approve.yml  cicd.yml  docker.yml  docker_build.yml  docker_manual_build.yml  rust.yml
api_lib/: Cargo.toml
api_lib/src/: lib.rs
api_lib/src/database/: db_interface.rs  mod.rs  queries.rs
api_lib/src/jwt_manager/: check_jwt_timeout.rs  check_jwt_validity.rs  decode_jwt.rs  generate_jwt.rs  get_jwt_from_request.rs  get_jwt_secret.rs  get_jwt_timeout.rs  get_timeout_from_jwt.rs  get_user_id_from_jwt.rs  jwt_claims.rs  mod.rs
api_lib/src/redis/: mod.rs  redis_manager.rs
api_lib/tests/: env_tests.rs  jwt_tests.rs
api_macro_lib/: Cargo.toml
api_macro_lib/src/: lib.rs
check_jwt_macro/: Cargo.toml
examples/: generate_openapi.rs
src/: auth_middleware.rs  cache.ts  database.ts  lib.rs  main.rs  swagger.rs
src/app/: layout.tsx  page.tsx
src/components/: navbar.tsx
src/context/: ModuleContext.tsx
src/database/: db_interface.rs  mod.rs  queries.rs  querys.rs
src/database/auth/: mod.rs
src/database/get_user_id/: mod.rs  query.rs  view.rs
src/database/groups/: mod.rs
src/database/postgresql/: mod.rs  postgre_interface.rs
src/database/queries/: about_user.rs  create_session.rs  get_active_session.rs  get_session_by_token.rs  get_sessions_by_user.rs  login.rs  mod.rs  register.rs  revoke_previous_session.rs  revoke_session.rs  revoke_session_by_id.rs  revoke_session_by_token.rs
src/database/queries_result_views/: about_user_query_result_view.rs  does_user_exist_by_email.rs  does_user_exist_by_id.rs  login_user.rs  mod.rs  register_user.rs  utils.rs
src/database/query_views/: about_user_query_view.rs  can_create_user.rs  create_session.rs  does_user_exist_by_email.rs  login_user.rs  mod.rs  register_user.rs  revoke_previous_session.rs  (+1 more)
src/endpoints/: mod.rs  swagger.rs
src/jwt_manager/: decode_jwt.rs  generate_jwt.rs  get_jwt_secret.rs  get_jwt_timeout.rs  get_timeout_from_jwt.rs  get_user_id_from_jwt.rs  jwt_claims.rs  mod.rs
src/redis/: mod.rs  redis_manager.rs
src/register/: mod.rs  register_request.rs  register_view.rs
tests/: env_tests.rs  jwt_tests.rs  queries_tests.rs  test_auth_queries.rs  test_roles_queries.rs  test_session_queries.rs  test_users_queries.rs
tests/common/: mod.rs  roles.rs
tests/queries/: mod.rs
(+425 files in other folders)
