[package]
name = "core_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
futures-util = "0.3"
jsonwebtoken = "9.3.1"
redis = "0.32.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }
api_macro_lib = { path = "./api_macro_lib" }
api_lib = { path = "./api_lib" }

[dev-dependencies]
once_cell = "1.21.3"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
