[package]
name = "core_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
mairie360_api_lib = "0.4.1"
rand = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid"]}
tokio = { version = "1.50.1", features = ["full"] }
tokio-postgres = "0.7.17"
utoipa = { version = "5", features = ["actix_extras", "yaml"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.3.1"
once_cell = "1.21.3"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
