[package]
name = "api_macro_lib"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
actix-web = "4"
api_lib = { path = "../api_lib" }
futures-util = "0.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
once_cell = "1.21.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
